@@ -1,5 +1,11 @@
 This is a summary of the changes in KTIGCC since the first alpha release:
 
+KTIGCC 1.02 (2006-09-05):
+
+* Fixed inverted logic bug causing the Debug menu and toolbar buttons to get
+  hidden during File/New/Project.
+
+
 KTIGCC 1.01 (2006-08-21):
 
 * Find and Replace dialogs now remember history (but only for the current KTIGCC
